2007-03-08  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/WidgetDesignerBackend.cs: ResetSelection now sets the
	  focus to the fixed container.
	* libsteticui/PropertyTree.cs: Dispose the edit session of a cell when
	  losing the focus.
	* libsteticui/PaletteBackend.cs: Don't call SetActionGroups when
	  disposing, since it ends calling show().
	* libstetic/wrapper/Container.cs: Use ResetSelection to remove the
	  focus from the current widget.
	* libstetic/editor/TextEditor.cs: Don't fire the changed event at every
	  key press, only when pressing enter or losing the focus.
	* libstetic/PropertyEditorCell.cs: When losing the focus, update the
	  property value.
	* libstetic/wrapper/Widget.cs: Don't try to change widget event flags
	  if the widget is already realized.

2007-03-06  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ApplicationBackend.cs: Added some null checks. Added
	  BeginComponentDrag, to allow using an external toolbox.
	* libsteticui/ProjectBackend.cs, libsteticui/WidgetDesigner.cs,
	  libsteticui/Project.cs: Added method for getting all component
	  types accessible from a project. Added some null checks.
	* libsteticui/WidgetEditSession.cs: Reload the project when the widget
	  libraries change.
	* libsteticui/Application.cs: Fill ComponentType with category
	  information.
	* libsteticui/PropertyTree.cs: Removed the horizontall scrollbar. Cell
	  size will always fit the available space. Allow changing the column
	  width by dragging the divider.
	* libsteticui/PaletteBackend.cs: The library list of a project now
	  includes the core library.
	* libsteticui/ActionGroupComponent.cs: Added null check.
	* libsteticui/ComponentType.cs: Added category information. Allow
	  creating a ComponentType from an action.
	* libsteticui/WidgetComponent.cs: Added some null checks.
	* libstetic/editor/Enumeration.cs: Use a combo box entry with no frame
	  as selector. It takes less space.